# python-cli-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml
.github/: pull-request-template.md
.github/workflows/: ci.yml
my_app/: cli.py  config.py
tests/: conftest.py  test_config.py
