# We do our best to sync this template with the latest version in our internal documentation.
# For MIT developers, we strongly recommend copying the pyproject.toml template from:
# https://mitlibraries.atlassian.net/wiki/spaces/IN/pages/3432415247/Python+Project+Linters#Template-for-pyproject.toml

[project]
name = "python-lambda-template"
version = "2.0.0"
requires-python = ">=3.13"

dependencies = [
    "click>=8.2.1",
    "sentry-sdk>=2.34.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coveralls>=4.0.1",
    "mypy>=1.17.1",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.black]
line-length = 90

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["tests/"]

[tool.pytest.ini_options]
log_level = "INFO"

[tool.ruff]
target-version = "py313"

# set max line length
line-length = 90

# enumerate all fixed violations
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = [
    "COM812",
    "D107", 
    "N812", 
    "PTH", 
    "C90",
    "D100",
    "D101", 
    "D102",
    "D103",
    "D104", 
    "PLR0912",
    "PLR0913", 
    "PLR0915",
    "S321",
]

# allow autofix behavior for specified rules
fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ANN",
    "ARG001",
    "S101",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"
